<resources>
    <string name="app_name">ClassifiedsApp</string>
    <string name="title_activity_login">LoginActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="re_enter">Re-enter Password</string>
    <string name="Rs">\u20B9</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>

    <string name="home">home</string>
    <string name="search">search</string>
    <string name="chat">chats</string>
    <string name="profile">profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="phone">Phone</string>
    <string name="price">Price</string>
    <string name="myAds">My Ads</string>
</resources>