<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

<!--    <com.google.android.material.appbar.AppBarLayout-->
<!--        android:id="@+id/appBarLayout"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:theme="@style/Theme.ClassifiedsApp.AppBarOverlay"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent">-->

<!--        <androidx.appcompat.widget.Toolbar-->
<!--            android:id="@+id/toolbar"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:background="?attr/colorPrimary"-->
<!--            app:popupTheme="@style/Theme.ClassifiedsApp.PopupOverlay" />-->

<!--    </com.google.android.material.appbar.AppBarLayout>-->

    <TextView
        android:id="@+id/Pawspace"
        android:layout_width="240dp"
        android:layout_height="63dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/greatvibes"
        android:includeFontPadding="false"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="58sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextField"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="251dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/username"
        android:textColorHint="@color/black"
        app:boxCornerRadiusBottomEnd="30dp"
        app:boxCornerRadiusBottomStart="30dp"
        app:boxCornerRadiusTopEnd="30dp"
        app:boxCornerRadiusTopStart="30dp"
        app:boxStrokeColor="@color/colorPrimary"
        app:hintTextColor="#E8768D"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Pawspace">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:cursorVisible="true"
            android:textColor="@color/design_default_color_on_secondary" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextField2"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="251dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/password"
        android:textColorHint="@color/black"
        app:boxCornerRadiusBottomEnd="30dp"
        app:boxCornerRadiusBottomStart="30dp"
        app:boxCornerRadiusTopEnd="30dp"
        app:boxCornerRadiusTopStart="30dp"
        app:endIconMode="password_toggle"
        app:hintTextColor="#E8768D"
        app:layout_constraintEnd_toEndOf="@+id/outlinedTextField"
        app:layout_constraintStart_toStartOf="@+id/outlinedTextField"
        app:layout_constraintTop_toBottomOf="@+id/outlinedTextField"
        app:boxStrokeColor="@color/colorPrimary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:cursorVisible="true"
            android:inputType="textPassword"
            android:textColor="@color/design_default_color_on_secondary" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/Login"
        android:layout_width="150dp"
        android:layout_height="54dp"
        android:text="Login"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:cornerRadius="25dp"
        app:backgroundTint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgot_password"
        app:layout_constraintVertical_bias="0.153"
        app:strokeColor="@color/black"
        app:strokeWidth="0.62dp" />

    <Button
        android:id="@+id/forgot_password"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_marginTop="16dp"
        android:text="Forgot Password?"
        android:textColor="@color/black"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="@+id/outlinedTextField2"
        app:layout_constraintTop_toBottomOf="@+id/outlinedTextField2" />

    <Button
        android:id="@+id/SignUp"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="52dp"
        android:text="SignUp"
        android:textColor="@color/colorPrimaryVariant"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/signuptext"
        app:layout_constraintTop_toBottomOf="@+id/Login" />

    <TextView
        android:id="@+id/signuptext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Don't have an account?"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/SignUp"
        app:layout_constraintStart_toStartOf="@+id/Login"
        app:layout_constraintTop_toTopOf="@+id/SignUp" />



</androidx.constraintlayout.widget.ConstraintLayout>